# rag-pipeline

./: .coverage  .envrc  .gitignore  README.md  TODO.md  default.nix  main.py  page_index.json  pyproject.toml
.claude/memory/: MEMORY.md  feedback_tool_execution.md
src/rag_pipeline/: config.py  pipeline.py
src/rag_pipeline/chunking/: splitter.py
src/rag_pipeline/embedding/: embedder.py
src/rag_pipeline/ingest/: cleaner.py  fetcher.py  reader.py
src/rag_pipeline/retrieval/: retriever.py
src/rag_pipeline/store/: index_state.py  vector_store.py
tests/test_chunking/: test_splitter.py
tests/test_embedding/: test_embedder.py
tests/test_ingest/: test_cleaner.py  test_fetcher.py  test_reader.py
tests/test_retrieval/: test_retriever.py
tests/test_store/: test_vector_store.py
